--- a/frontend/views/product_category/product-category-view.css
+++ b/frontend/views/product_category/product-category-view.css
@@ -1,31 +1,31 @@
-.product-view {
+.product-category-view {
   display: flex;
   height: 100%;
   flex-direction: column;
 }
 
-.product-view .grid-wrapper {
+.product-category-view .grid-wrapper {
   flex-grow: 1;
   width: 100%;
 }
 
-.product-view .full-size {
+.product-category-view .full-size {
   width: 100%;
   height: 100%;
 }
 
-.product-view #editor-layout {
+.product-category-view #editor-layout {
   width: 400px;
   display: flex;
   flex-direction: column;
 }
 
-.product-view #editor {
+.product-category-view #editor {
   padding: var(--lumo-space-l);
   flex-grow: 1;
 }
 
-.master-detail-view #button-layout {
+.product-category-view #button-layout {
   width: 100%;
   flex-wrap: wrap;
   background-color: var(--lumo-contrast-5pct);
